samples/_failures_safe/1761213776_05a451_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0968dd51.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_0968dd51.c:162:13: error: expected ‘;’ at end of input
  162 |     return 1
      |             ^
      |             ;
./samples/SAFE/__tmp_0968dd51.c:162:5: error: expected declaration or statement at end of input
  162 |     return 1
      |     ^~~~~~
